tests/baselines/reference/unusedVariablesinNamespaces1.errors.txt
unusedVariablesinNamespaces1.ts(2,11): error TS6133: 'lettersRegexp' is declared but its value is never read.


==== unusedVariablesinNamespaces1.ts (1 errors) ====
    namespace Validation {
        const lettersRegexp = /^[A-Za-z]+$/;
              ~~~~~~~~~~~~~
!!! error TS6133: 'lettersRegexp' is declared but its value is never read.
    }